--- a/ui.html
+++ b/ui.html
@@ -1,2 +1,2 @@
-<script>window.location = 'http://localhost:5173/'</script>
+<script>window.location = 'https://color-kit-plug.vercel.app/'</script>
 
